turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:28: error: overloaded method value setX with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
allerVers(setX()+50,setY())
          ^