turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {

def carre(c:Double) {
	for (k <-0 to 3) {
	avance(c)
	droite(90)}
}

def triangle(t:Double) {
	for (k <-0 to 2) {
	droite(30)
	avance(t)
	droite(90)}
}

def house(h:Double) {
carre(h)
avance(h)
triangle(h)
recule(h)

}

house(30)


allerVers(setX()+50,setY())
}